fix(forms): add flex wrap in register links

--- a/src/app/modules/login/components/formsStyle.css
+++ b/src/app/modules/login/components/formsStyle.css
@@ -13,6 +13,7 @@ form {
 .actionsButtons div {
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .actionsButtons div a {
